--- a/nmgr/i2/softwarove_inzenyrstvi/Programovaci_jazyky_a_prekladace.tex
+++ b/nmgr/i2/softwarove_inzenyrstvi/Programovaci_jazyky_a_prekladace.tex
@@ -16,3 +16,16 @@
 \item Překladače vs. interpretry, skriptovací jazyky.
 \end{pitemize}
 \end{pozadavky}
+
+\subsection{Struktura kompilátoru a navazujících nástrojů (linkery, loadery, debuggery, knihovny, preprocesory).}
+\subsection{Konečné automaty a lexikální analýza.}
+\subsection{Syntaktická analýza - LL, LR techniky.}
+\subsection{Syntaxí řízený překlad a atributové gramatiky.}
+\subsection{Reprezentace programu mezikódem.}
+\subsection{Překlad výrazů a programových struktur.}
+\subsection{Rozsahy platnosti proměnných, aktivační záznamy, implementace vnořených procedur, volací konvence.}
+\subsection{Vliv architektury počítače na generování kódu a optimalizaci.}
+\subsection{Metody generování kódu, přidělování registrů, scheduling, optimalizace.}
+\subsection{Podpora kompilátorů pro synchronizační primitiva, vlákna.}
+\subsection{Objektově orientované jazyky a principy jejich implementace.}
+\subsection{Překladače vs. interpretry, skriptovací jazyky.}
