Zmena hlavicky PDF souboru a pridani pouziti balicku float

--- a/common/format.tex
+++ b/common/format.tex
@@ -2,19 +2,22 @@
 
 \frenchspacing
 \usepackage{a4}
-\usepackage[pdftitle={Vypracovane otazky k bakalarskym statnicim}, pdfauthor={študenti MFF}, pdfdisplaydoctitle=true, colorlinks=false,unicode=true,pdfborder=0 0 0]{hyperref}
+\usepackage[pdftitle={Vypracovane otazky ke statnicim}, pdfauthor={studenti MFF}, pdfdisplaydoctitle=true, colorlinks=false,unicode=true,pdfborder=0 0 0]{hyperref}
 \usepackage{czech}
 \usepackage{ucs}
 \usepackage[utf8x]{inputenc}
 
-\title{Vypracovane otazky k bakalarskym statnicim}
-\author{študenti MFF}
+\title{Vypracovane otazky ke statnicim}
+\author{studenti MFF}
 
 \usepackage{graphicx}
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage{color}
 \usepackage[left=3cm, right=3cm, top=3cm, bottom=3cm]{geometry} % nastavení dané velikosti okrajů
 
+\usepackage{float}
+\newfloat{kod}{h}{kod}
+\floatname{kod}{Kód}
 
 %Vacsina prostredi je dvojjazicne. V pripade, ze znenie napr pozorovania je pisane po slovensky, malo by byt po slovensky aj oznacenie.
 
