--- a/nmgr/I1-Neproceduralni_programovani_a_umela_inteligence.tex
+++ b/nmgr/I1-Neproceduralni_programovani_a_umela_inteligence.tex
@@ -2,7 +2,7 @@
 \input{../common/format.tex}
 \clearpage
 
-\title{\LARGE Učební texty k státní závěrečné zkoušce \\ Teoretická informatika \\ Neprocedurální programování a umělá inteligence}
+\title{\LARGE Učební texty ke státní závěrečné zkoušce \\ Teoretická informatika \\ Neprocedurální programování a umělá inteligence}
 
 
 \begin{document}
