--- a/nmgr/I2-Spolehlive_systemy.tex
+++ b/nmgr/I2-Spolehlive_systemy.tex
@@ -2,7 +2,7 @@
 \input{../common/format.tex}
 \clearpage
 
-\title{\LARGE Učební texty k státní závěrečné zkoušce \\ Softwarové systémy \\ Spolehlivé systémy}
+\title{\LARGE Učební texty ke státní závěrečné zkoušce \\ Softwarové systémy \\ Spolehlivé systémy}
 
 
 \begin{document}
