--- a/nmgr/I3-Matematicka_lingvistika-2009.tex
+++ b/nmgr/I3-Matematicka_lingvistika-2009.tex
@@ -2,7 +2,7 @@
 \input{../common/format.tex}
 \clearpage
 
-\title{\LARGE Učební texty k státní závěrečné zkoušce \\ Matematická lingvistika}
+\title{\LARGE Učební texty ke státní závěrečné zkoušce \\ Matematická lingvistika}
 
 
 \begin{document}
