--- a/nmgr/I3-Matematicka_lingvistika.tex
+++ b/nmgr/I3-Matematicka_lingvistika.tex
@@ -2,7 +2,7 @@
 \input{../common/format.tex}
 \clearpage
 
-\title{\LARGE Učební texty k státní závěrečné zkoušce \\ Matematická lingvistika \\ Zahájení 2010}
+\title{\LARGE Učební texty ke státní závěrečné zkoušce \\ Matematická lingvistika \\ Zahájení 2010}
 
 
 \begin{document}
