--- a/nmgr/I4-Matematicke_struktury_informatiky.tex
+++ b/nmgr/I4-Matematicke_struktury_informatiky.tex
@@ -2,7 +2,7 @@
 \input{../common/format.tex}
 \clearpage
 
-\title{\LARGE Učební texty k státní závěrečné zkoušce \\ Diskrétní modely a algoritmy \\ Matematické struktury informatiky}
+\title{\LARGE Učební texty ke státní závěrečné zkoušce \\ Diskrétní modely a algoritmy \\ Matematické struktury informatiky}
 
 
 \begin{document}
