--- a/nmgr/I1-Algoritmy_a_slozitost.tex
+++ b/nmgr/I1-Algoritmy_a_slozitost.tex
@@ -2,7 +2,7 @@
 \input{../common/format.tex}
 \clearpage
 
-\title{\LARGE Učební texty k státní závěrečné zkoušce \\ Teoretická informatika \\ Algoritmy a složitost}
+\title{\LARGE Učební texty ke státní závěrečné zkoušce \\ Teoretická informatika \\ Algoritmy a složitost}
 
 
 \begin{document}
