--- a/nmgr/I2-Softwarove_inzenyrstvi.tex
+++ b/nmgr/I2-Softwarove_inzenyrstvi.tex
@@ -2,7 +2,7 @@
 \input{../common/format.tex}
 \clearpage
 
-\title{\LARGE Učební texty k státní závěrečné zkoušce \\ Softwarové systémy \\ Softwarové inženýrství}
+\title{\LARGE Učební texty ke státní závěrečné zkoušce \\ Softwarové systémy \\ Softwarové inženýrství}
 
 
 \begin{document}
