--- a/nmgr/I2-Systemove_architektury.tex
+++ b/nmgr/I2-Systemove_architektury.tex
@@ -2,7 +2,7 @@
 \input{../common/format.tex}
 \clearpage
 
-\title{\LARGE Učební texty k státní závěrečné zkoušce \\ Softwarové systémy \\ Systémové architektury}
+\title{\LARGE Učební texty ke státní závěrečné zkoušce \\ Softwarové systémy \\ Systémové architektury}
 
 
 \begin{document}
