--- a/nmgr/I4-Diskretni_matematika_a_kombinatoricka_optimalizace.tex
+++ b/nmgr/I4-Diskretni_matematika_a_kombinatoricka_optimalizace.tex
@@ -2,7 +2,7 @@
 \input{../common/format.tex}
 \clearpage
 
-\title{\LARGE Učební texty k státní závěrečné zkoušce \\ Diskrétní modely a algoritmy \\ Diskrétní matematika a kombinatorická optimalizace}
+\title{\LARGE Učební texty ke státní závěrečné zkoušce \\ Diskrétní modely a algoritmy \\ Diskrétní matematika a kombinatorická optimalizace}
 
 
 \begin{document}
