--- a/nmgr/I4-Optimalizace.tex
+++ b/nmgr/I4-Optimalizace.tex
@@ -2,7 +2,7 @@
 \input{../common/format.tex}
 \clearpage
 
-\title{\LARGE Učební texty k státní závěrečné zkoušce \\ Diskrétní modely a algoritmy \\ Optimalizace}
+\title{\LARGE Učební texty ke státní závěrečné zkoušce \\ Diskrétní modely a algoritmy \\ Optimalizace}
 
 
 \begin{document}
